# libgepub

libgepub/: gepub-doc.c  gepub-doc.h  gepub-widget.c  gepub-widget.h
tests/: meson.build  test-gepub-toc.c  test-gepub.c  test-with-toc.glade
